Fixed footer height on mobile

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -20,9 +20,9 @@ html, body {
   padding-bottom: 60px;
 }
 #footer {
+  position: absolute;
   width: 100%;
   height: 60px;
-  position: absolute;
   bottom: 0;
   left: 0;
 }
@@ -59,7 +59,7 @@ html, body {
     padding-top: 100px;
   }
   #footer {
-    height: 90px;
+    height: 100px;
   }
 }
 
@@ -85,5 +85,3 @@ html, body {
 #random {
   margin-top: 24.120px;
 }
-
-
